--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,18 +1,1 @@
-html {
-  font-size: 14px;
-}
-
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-  margin-bottom: 60px;
-}
+body{background:#FFF;color:#1D1D1F;margin-bottom:60px}html{position:relative;min-height:100%}.footer{position:absolute;bottom:0;width:100%;white-space:nowrap;line-height:60px}.app-navbar{background:rgba(0,0,0,.8)}.app-navbar .text-dark{color:#b9c3ce!important}.app-navbar .text-dark:hover{color:#FFF!important}.app-navbar .navbar-brand{color:#a57dea}.app-navbar .navbar-brand:hover{color:#d727da}.app-navbar .dropdown-toggle{border-color:#a562ad;color:#ae84b3}.left-contact{background-color:#9854a0;color:#FFF;text-align:center;border-top-left-radius:15px;border-bottom-left-radius:15px}.left-contact h4{line-height:40px;font-weight:400;margin-top:20px}.left-contact img{max-width:100px}.form-contact label{font-weight:700}.form-contact .btn-primary{background-color:#9854a0!important;border-color:#9854a0!important}
